Window Managers/XMonad/xmonad.errors

xmonad.hs:11:41: error:
    Module
    ‘XMonad.Layout.Minimize’
    does not export
    ‘RestoreNextMinimizedWin’
   |
11 | import XMonad.Layout.Minimize(minimize, RestoreNextMinimizedWin)
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^
